WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299734
[GStreamer][WebRTC] End-point shouldn't generate SDP offer with empty media msid attribute
https://bugs.webkit.org/show_bug.cgi?id=299734
Summary
[GStreamer][WebRTC] End-point shouldn't generate SDP offer with empty media m...
Philippe Normand
Reported
2025-09-29 06:56:33 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-09-29 07:57:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51502
EWS
Comment 2
2025-09-30 00:50:01 PDT
Committed
300741@main
(ab8caf13a6f0): <
https://commits.webkit.org/300741@main
> Reviewed commits have been landed. Closing PR #51502 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-09-30 00:51:18 PDT
<
rdar://problem/161631827
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug