[GStreamer][WebRTC] End-point shouldn't generate SDP offer with empty media msid attribute https://bugs.webkit.org/show_bug.cgi?id=299734

Reviewed by Xabier Rodriguez-Calvar.

Until this patch the SDP offer media corresponding to recvonly transceivers contained an empty msid
attribute. That attribute, if present should not be empty. Now covered by a layout test as well.

Driving by, minor logging improvements in PeerConnectionBackend.

* LayoutTests/webrtc/createOfferAnswer-expected.txt:
* LayoutTests/webrtc/createOfferAnswer.html:
* Source/WebCore/Modules/mediastream/PeerConnectionBackend.cpp:
(WebCore::PeerConnectionBackend::createOfferSucceeded):
(WebCore::PeerConnectionBackend::createAnswerSucceeded):
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::createTransceiverBackends):

Canonical link: https://commits.webkit.org/300741@main